name:                eta
-- @VERSION_CHANGE@
-- @BUILD_NUMBER@
version:             0.7.2.2
description:         Modern Haskell on the JVM
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>, Jyothsna Patnam <jyothsnasrinivas17@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2016-2017, Jyothsna Patnam 2017-2018
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  compiler/ETA/Parser/Parser.y
                     compiler/ETA/Parser/Lexer.x

flag debug
  Description: Enable debug support
  Default:     False

flag repl
  Description: Enable repl support
  Default:     True

source-repository head
    type: git
    location: https://github.com/typelead/eta.git

library
    c-sources:           compiler/cbits/genSym.c
                         compiler/cbits/cutils.c
    ghc-options:         -Wall -fno-warn-name-shadowing -Werror
    if flag(repl)
      cpp-options:       -DETA_REPL
      build-depends:     eta-repl
                       , eta-meta
    default-language:    Haskell2010
    default-extensions:  RecordWildCards
                       , NamedFieldPuns
                       , MultiParamTypeClasses
                       , BangPatterns
                       , TupleSections
    exposed-modules:     ETA.BasicTypes.Avail
                       , ETA.BasicTypes.BasicTypes
                       , ETA.BasicTypes.ConLike
                       , ETA.BasicTypes.DataCon
                       , ETA.BasicTypes.Demand
                       , ETA.BasicTypes.Id
                       , ETA.BasicTypes.IdInfo
                       , ETA.BasicTypes.Lexeme
                       , ETA.BasicTypes.Literal
                       , ETA.BasicTypes.MkId
                       , ETA.BasicTypes.Module
                       , ETA.BasicTypes.NameEnv
                       , ETA.BasicTypes.Name
                       , ETA.BasicTypes.NameSet
                       , ETA.BasicTypes.OccName
                       , ETA.BasicTypes.PatSyn
                       , ETA.BasicTypes.RdrName
                       , ETA.BasicTypes.SrcLoc
                       , ETA.BasicTypes.UniqSupply
                       , ETA.BasicTypes.Unique
                       , ETA.BasicTypes.VarEnv
                       , ETA.BasicTypes.Var
                       , ETA.BasicTypes.VarSet
                       , ETA.CodeGen.ArgRep
                       , ETA.CodeGen.Bind
                       , ETA.CodeGen.Closure
                       , ETA.CodeGen.Constr
                       , ETA.CodeGen.Env
                       , ETA.CodeGen.Expr
                       , ETA.CodeGen.Foreign
                       , ETA.CodeGen.Layout
                       , ETA.CodeGen.Main
                       , ETA.CodeGen.Monad
                       , ETA.CodeGen.Name
                       , ETA.CodeGen.Prim
                       , ETA.CodeGen.Rts
                       , ETA.CodeGen.Types
                       , ETA.CodeGen.Utils
                       , ETA.Core.CoreArity
                       , ETA.Core.CoreFVs
                       , ETA.Core.CoreLint
                       , ETA.Core.CorePrep
                       , ETA.Core.CoreSeq
                       , ETA.Core.CoreSubst
                       , ETA.Core.CoreSyn
                       , ETA.Core.CoreTidy
                       , ETA.Core.CoreUnfold
                       , ETA.Core.CoreUtils
                       , ETA.Core.MkCore
                       , ETA.Core.PprCore
                       , ETA.Core.TrieMap
                       , ETA.Debug
                       , ETA.DeSugar.Check
                       , ETA.DeSugar.Coverage
                       , ETA.DeSugar.DeSugar
                       , ETA.DeSugar.DsMonad
                       , ETA.DeSugar.DsArrows
                       , ETA.DeSugar.DsBinds
                       , ETA.DeSugar.DsExpr
                       , ETA.DeSugar.DsGRHSs
                       , ETA.DeSugar.DsListComp
                       , ETA.DeSugar.DsMeta
                       , ETA.DeSugar.DsForeign
                       , ETA.DeSugar.DsUtils
                       , ETA.DeSugar.Match
                       , ETA.DeSugar.MatchCon
                       , ETA.DeSugar.MatchLit
                       , ETA.DeSugar.StaticPtrTable
                       , ETA.HsSyn.HsBinds
                       , ETA.HsSyn.HsDecls
                       , ETA.HsSyn.HsDoc
                       , ETA.HsSyn.HsExpr
                       , ETA.HsSyn.HsImpExp
                       , ETA.HsSyn.HsLit
                       , ETA.HsSyn.HsPat
                       , ETA.HsSyn.HsSyn
                       , ETA.HsSyn.HsTypes
                       , ETA.HsSyn.HsUtils
                       , ETA.HsSyn.PlaceHolder
                       , ETA.Iface.BinIface
                       , ETA.Iface.BuildTyCl
                       , ETA.Iface.FlagChecker
                       , ETA.Iface.IfaceEnv
                       , ETA.Iface.IfaceSyn
                       , ETA.Iface.IfaceType
                       , ETA.Iface.LoadIface
                       , ETA.Iface.MkIface
                       , ETA.Iface.TcIface
                       , ETA.Main.Annotations
                       , ETA.Main.CmdLineParser
                       , ETA.Main.Constants
                       , ETA.Main.DriverMkDepend
                       , ETA.Main.DriverPhases
                       , ETA.Main.DriverPipeline
                       , ETA.Main.DynamicLoading
                       , ETA.Main.DynFlags
                       , ETA.Main.ErrUtils
                       , ETA.Main.Finder
                       , ETA.Main.FileCleanup
                       , ETA.Main.GHC
                       , ETA.Main.GhcMake
                       , ETA.Main.GhcMonad
                       , ETA.Main.GhcPlugins
                       , ETA.Main.HeaderInfo
                       , ETA.Main.Hooks
                       , ETA.Main.HscMain
                       , ETA.Main.HscStats
                       , ETA.Main.HscTypes
                       , ETA.Main.InteractiveEval
                       , ETA.Main.InteractiveEvalTypes
                       , ETA.Main.PackageConfig
                       , ETA.Main.Packages
                       , ETA.Main.PipelineMonad
                       , ETA.Main.Plugins
                       , ETA.Main.PprTyThing
                       , ETA.Main.StaticFlags
                       , ETA.Main.SysTools
                       , ETA.Main.TidyPgm
                       , ETA.Interactive.ByteCodeAsm
                       , ETA.Interactive.ByteCodeGen
                       , ETA.Interactive.ByteCodeInstr
                       , ETA.Interactive.ByteCodeItbls
                       , ETA.Interactive.ByteCodeLink
                       , ETA.Interactive.Debugger
                       , ETA.Interactive.DebuggerUtils
                       , ETA.Interactive.Linker
                       , ETA.Interactive.ObjLink
                       , ETA.Interactive.RtClosureInspect
                       , ETA.Parser.ApiAnnotation
                       , ETA.Parser.Ctype
                       , ETA.Parser.HaddockUtils
                       , ETA.Parser.Lexer
                       , ETA.Parser.Parse
                       , ETA.Parser.Parser
                       , ETA.Parser.RdrHsSyn
                       , ETA.Prelude.ForeignCall
                       , ETA.Prelude.PrelInfo
                       , ETA.Prelude.PrelNames
                       , ETA.Prelude.PrelRules
                       , ETA.Prelude.PrimOp
                       , ETA.Prelude.THNames
                       , ETA.Prelude.TysPrim
                       , ETA.Prelude.TysWiredIn
                       , ETA.Profiling.CostCentre
                       , ETA.Profiling.ProfInit
                       , ETA.Profiling.SCCfinal
                       , ETA.REPL
                       , ETA.Rename.RnBinds
                       , ETA.Rename.RnEnv
                       , ETA.Rename.RnExpr
                      --  , ETA.Rename.RnFixity
                       , ETA.Rename.RnHsDoc
                       , ETA.Rename.RnNames
                       , ETA.Rename.RnPat
                       , ETA.Rename.RnSource
                       , ETA.Rename.RnSplice
                       , ETA.Rename.RnTypes
                      --  , ETA.Rename.RnUnbound
                      --  , ETA.Rename.RnUtils
                       , ETA.SimplCore.CallArity
                       , ETA.SimplCore.CoreMonad
                       , ETA.SimplCore.CSE
                       , ETA.SimplCore.FloatIn
                       , ETA.SimplCore.FloatOut
                       , ETA.SimplCore.LiberateCase
                       , ETA.SimplCore.OccurAnal
                       , ETA.SimplCore.SAT
                       , ETA.SimplCore.SetLevels
                       , ETA.SimplCore.SimplCore
                       , ETA.SimplCore.SimplEnv
                       , ETA.SimplCore.Simplify
                       , ETA.SimplCore.SimplMonad
                       , ETA.SimplCore.SimplUtils
                       , ETA.SimplStg.SimplStg
                       , ETA.SimplStg.StgStats
                       , ETA.SimplStg.UnariseStg
                       , ETA.Specialise.Rules
                       , ETA.Specialise.SpecConstr
                       , ETA.Specialise.Specialise
                       , ETA.StgSyn.CoreToStg
                       , ETA.StgSyn.StgLint
                       , ETA.StgSyn.StgSyn
                       , ETA.StrAnal.DmdAnal
                       , ETA.StrAnal.WorkWrap
                       , ETA.StrAnal.WwLib
                       , ETA.SysTools.Terminal
                       , ETA.TypeCheck.FamInst
                       , ETA.TypeCheck.FunDeps
                       , ETA.TypeCheck.Inst
                       , ETA.TypeCheck.TcAnnotations
                       , ETA.TypeCheck.TcArrows
                       , ETA.TypeCheck.TcBinds
                       , ETA.TypeCheck.TcCanonical
                       , ETA.TypeCheck.TcClassDcl
                       , ETA.TypeCheck.TcDefaults
                       , ETA.TypeCheck.TcDeriv
                       , ETA.TypeCheck.TcEnv
                       , ETA.TypeCheck.TcErrors
                       , ETA.TypeCheck.TcEvidence
                       , ETA.TypeCheck.TcExpr
                       , ETA.TypeCheck.TcFlatten
                       , ETA.TypeCheck.TcForeign
                       , ETA.TypeCheck.TcGenDeriv
                       , ETA.TypeCheck.TcGenGenerics
                       , ETA.TypeCheck.TcHsSyn
                       , ETA.TypeCheck.TcHsType
                       , ETA.TypeCheck.TcInstDcls
                       , ETA.TypeCheck.TcInteract
                       , ETA.TypeCheck.TcMatches
                       , ETA.TypeCheck.TcMType
                       , ETA.TypeCheck.TcPat
                       , ETA.TypeCheck.TcPatSyn
                       , ETA.TypeCheck.TcPluginM
                       , ETA.TypeCheck.TcRnDriver
                       , ETA.TypeCheck.TcRnMonad
                       , ETA.TypeCheck.TcRnTypes
                       , ETA.TypeCheck.TcRules
                       , ETA.TypeCheck.TcSimplify
                       , ETA.TypeCheck.TcSMonad
                       , ETA.TypeCheck.TcSplice
                       , ETA.TypeCheck.TcTyClsDecls
                       , ETA.TypeCheck.TcTyDecls
                       , ETA.TypeCheck.TcType
                       , ETA.TypeCheck.TcTypeNats
                       , ETA.TypeCheck.TcUnify
                       , ETA.TypeCheck.TcValidity
                       , ETA.Types.Class
                       , ETA.Types.CoAxiom
                       , ETA.Types.Coercion
                       , ETA.Types.FamInstEnv
                       , ETA.Types.InstEnv
                       , ETA.Types.Kind
                       , ETA.Types.OptCoercion
                       , ETA.Types.TyCon
                       , ETA.Types.Type
                       , ETA.Types.TypeRep
                       , ETA.Types.Unify
                       , ETA.Utils.Bag
                       , ETA.Utils.Binary
                       , ETA.Utils.BooleanFormula
                       , ETA.Utils.BufWrite
                       , ETA.Utils.Digraph
                       , ETA.Utils.Encoding
                       , ETA.Utils.EnumSet
                       , ETA.Utils.Exception
                       , ETA.Utils.ExtsCompat46
                       , ETA.Utils.FastBool
                       , ETA.Utils.FastFunctions
                       , ETA.Utils.FastMutInt
                       , ETA.Utils.FastString
                       , ETA.Utils.FastTypes
                       , ETA.Utils.Fingerprint
                       , ETA.Utils.FiniteMap
                       , ETA.Utils.FV
                       , ETA.Utils.GraphBase
                       , ETA.Utils.GraphColor
                       , ETA.Utils.GraphOps
                       , ETA.Utils.GraphPpr
                       , ETA.Utils.IOEnv
                       , ETA.Utils.Json
                       , ETA.Utils.ListSetOps
                       , ETA.Utils.Maybes
                       , ETA.Utils.Metrics
                       , ETA.Utils.MonadUtils
                       , ETA.Utils.OrdList
                       , ETA.Utils.Outputable
                       , ETA.Utils.Pair
                       , ETA.Utils.Panic
                       , ETA.Utils.Platform
                       , ETA.Utils.PprColor
                       , ETA.Utils.Pretty
                       , ETA.Utils.State
                       , ETA.Utils.Stream
                       , ETA.Utils.StringBuffer
                       , ETA.Utils.UniqDFM
                       , ETA.Utils.UniqDSet
                       , ETA.Utils.UniqFM
                       , ETA.Utils.UniqSet
                       , ETA.Utils.UnVarGraph
                       , ETA.Utils.Util
                       , ETA.Util
                       , ETA.Utils.JAR
                       , Paths_eta
    build-depends:       base >= 4.7 && < 5
                       , binary
                       , bytestring
                       , text
                       , eta-boot
                       , eta-boot-th
                       , deepseq    >= 1.4 && < 1.5
                       , time       >= 1.4 && < 1.7
                       , process    >= 1   && < 1.3
                       , directory >= 1.2
                       , filepath
                       , codec-jvm >= 0
                       , hpc
                       , mtl
                       , zip >= 0.1.8
                       , path
                       , path-io
                       , exceptions
                       , transformers
                       , array
                       , containers
                       , hpp >= 0.5.2
                       , cpphs
                       , unix-compat >= 0.4.3.1
                       , gitrev
                       , semigroups

    if os(windows)
        build-depends:   Win32
    else
        build-depends:   unix
    hs-source-dirs:      compiler
    include-dirs:        include
    install-includes:    HsVersions.h Bytecodes.h
    exposed:             True
    buildable:           True
    build-tools:         alex
                       , happy
    if flag(debug)
       ghc-options:      -DDEBUG

executable eta
   ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -Werror
   hs-source-dirs:      eta
   main-is:             Main.hs
   default-language:    Haskell2010
   -- other-modules:       GhciMonad
   --                      GhciTags
   --                      InteractiveUI

   build-depends:       array
                      , base >= 4.7 && < 5
                      , bytestring
                      , deepseq == 1.4.*
                      , directory
                      , filepath
                      , process
                      , transformers == 0.4.*
                      , time == 1.5.*
                      , eta
   if flag(repl)
       -- NB: this is never built by the bootstrapping GHC+libraries
       Build-depends:
           containers     == 0.5.*,
           eta-boot,
           eta-repl,
           haskeline      == 0.7.*
       if os(windows)
           build-depends:   Win32
       else
           build-depends:   unix
       CPP-Options: -DETA_REPL
       GHC-Options: -fno-warn-name-shadowing
       Other-Modules:
           Eta.REPL.UI
           Eta.REPL.UI.Info
           Eta.REPL.UI.Monad
           Eta.REPL.UI.Tags
       Other-Extensions:
           BangPatterns
           FlexibleInstances
           LambdaCase
           MagicHash
           MultiWayIf
           OverloadedStrings
           RankNTypes
           RecordWildCards
           ScopedTypeVariables
           UnboxedTuples
           ViewPatterns

executable eta-test
    hs-source-dirs:      tests/packages
    main-is:             Test.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , turtle
                       , text
                       , aeson
                       , bytestring
                       , directory
                       , filepath
    ghc-options:       -Wall -Werror
