name:                eta
-- @VERSION_CHANGE@
-- @BUILD_NUMBER@
version:             0.8.6.5
description:         Modern Haskell on the JVM
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>, Jyothsna Patnam <jyothsnasrinivas17@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2016-2017, Jyothsna Patnam 2017-2018
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  compiler/Eta/Parser/Parser.y
                     compiler/Eta/Parser/Lexer.x

flag debug
  Description: Enable debug support
  Default:     False

flag repl
  Description: Enable repl support
  Default:     True

source-repository head
    type: git
    location: https://github.com/typelead/eta.git

library
    c-sources:           compiler/cbits/genSym.c
                         compiler/cbits/cutils.c
    ghc-options:         -Wall -fno-warn-name-shadowing -Werror
    if flag(repl)
      cpp-options:       -DETA_REPL
      build-depends:     eta-repl
                       , eta-meta
    default-language:    Haskell2010
    default-extensions:  RecordWildCards
                       , NamedFieldPuns
                       , MultiParamTypeClasses
                       , BangPatterns
                       , TupleSections
    exposed-modules:     Eta.Backpack.DriverBkp
                       , Eta.Backpack.BkpSyn
                       , Eta.Backpack.NameShape
                       , Eta.Backpack.RnModIface
                       , Eta.BasicTypes.Avail
                       , Eta.BasicTypes.BasicTypes
                       , Eta.BasicTypes.ConLike
                       , Eta.BasicTypes.DataCon
                       , Eta.BasicTypes.Demand
                       , Eta.BasicTypes.Id
                       , Eta.BasicTypes.IdInfo
                       , Eta.BasicTypes.Interop
                       , Eta.BasicTypes.Lexeme
                       , Eta.BasicTypes.Literal
                       , Eta.BasicTypes.MkId
                       , Eta.BasicTypes.Module
                       , Eta.BasicTypes.NameCache
                       , Eta.BasicTypes.NameEnv
                       , Eta.BasicTypes.Name
                       , Eta.BasicTypes.NameSet
                       , Eta.BasicTypes.OccName
                       , Eta.BasicTypes.PatSyn
                       , Eta.BasicTypes.RdrName
                       , Eta.BasicTypes.SrcLoc
                       , Eta.BasicTypes.UniqSupply
                       , Eta.BasicTypes.Unique
                       , Eta.BasicTypes.VarEnv
                       , Eta.BasicTypes.Var
                       , Eta.BasicTypes.VarSet
                       , Eta.CodeGen.ArgRep
                       , Eta.CodeGen.Bind
                       , Eta.CodeGen.Closure
                       , Eta.CodeGen.Constr
                       , Eta.CodeGen.Env
                       , Eta.CodeGen.Expr
                       , Eta.CodeGen.Foreign
                       , Eta.CodeGen.Layout
                       , Eta.CodeGen.Main
                       , Eta.CodeGen.Monad
                       , Eta.CodeGen.Name
                       , Eta.CodeGen.Prim
                       , Eta.CodeGen.Rts
                       , Eta.CodeGen.Types
                       , Eta.CodeGen.Utils
                       , Eta.Core.CoreArity
                       , Eta.Core.CoreFVs
                       , Eta.Core.CoreLint
                       , Eta.Core.CorePrep
                       , Eta.Core.CoreSeq
                       , Eta.Core.CoreSubst
                       , Eta.Core.CoreSyn
                       , Eta.Core.CoreTidy
                       , Eta.Core.CoreUnfold
                       , Eta.Core.CoreUtils
                       , Eta.Core.MkCore
                       , Eta.Core.PprCore
                       , Eta.Core.TrieMap
                       , Eta.Debug
                       , Eta.DeSugar.Check
                       , Eta.DeSugar.Coverage
                       , Eta.DeSugar.DeSugar
                       , Eta.DeSugar.DsMonad
                       , Eta.DeSugar.DsArrows
                       , Eta.DeSugar.DsBinds
                       , Eta.DeSugar.DsExpr
                       , Eta.DeSugar.DsGRHSs
                       , Eta.DeSugar.DsListComp
                       , Eta.DeSugar.DsMeta
                       , Eta.DeSugar.DsForeign
                       , Eta.DeSugar.DsUsage
                       , Eta.DeSugar.DsUtils
                       , Eta.DeSugar.Match
                       , Eta.DeSugar.MatchCon
                       , Eta.DeSugar.MatchLit
                       , Eta.DeSugar.PmExpr
                       , Eta.DeSugar.TmOracle
                       , Eta.DeSugar.StaticPtrTable
                       , Eta.HsSyn.Convert
                       , Eta.HsSyn.HsBinds
                       , Eta.HsSyn.HsDecls
                       , Eta.HsSyn.HsDoc
                       , Eta.HsSyn.HsExpr
                       , Eta.HsSyn.HsImpExp
                       , Eta.HsSyn.HsLit
                       , Eta.HsSyn.HsPat
                       , Eta.HsSyn.HsSyn
                       , Eta.HsSyn.HsTypes
                       , Eta.HsSyn.HsUtils
                       , Eta.HsSyn.PlaceHolder
                       , Eta.Iface.BinFingerprint
                       , Eta.Iface.BinIface
                       , Eta.Iface.BuildTyCl
                       , Eta.Iface.FlagChecker
                       , Eta.Iface.IfaceEnv
                       , Eta.Iface.IfaceSyn
                       , Eta.Iface.IfaceType
                       , Eta.Iface.LoadIface
                       , Eta.Iface.MkIface
                       , Eta.Iface.MkJavaIface
                       , Eta.Iface.TcIface
                       , Eta.Main.Annotations
                       , Eta.Main.CmdLineParser
                       , Eta.Main.Constants
                       , Eta.Main.DriverMkDepend
                       , Eta.Main.DriverPhases
                       , Eta.Main.DriverPipeline
                       , Eta.Main.DynFlags
                       , Eta.Main.ErrUtils
                       , Eta.Main.Finder
                       , Eta.Main.FileCleanup
                       , Eta.Main.GHC
                       , Eta.Main.GhcMake
                       , Eta.Main.GhcMonad
                       , Eta.Main.GhcPlugins
                       , Eta.Main.HeaderInfo
                       , Eta.Main.Hooks
                       , Eta.Main.HscMain
                       , Eta.Main.HscStats
                       , Eta.Main.HscTypes
                       , Eta.Main.InteractiveEval
                       , Eta.Main.InteractiveEvalTypes
                       , Eta.Main.PackageConfig
                       , Eta.Main.Packages
                       , Eta.Main.PipelineMonad
                       , Eta.Main.Plugins
                       , Eta.Main.PprTyThing
                       , Eta.Main.StaticFlags
                       , Eta.Main.SysTools
                       , Eta.Main.TidyPgm
                       , Eta.Parser.ApiAnnotation
                       , Eta.Parser.Ctype
                       , Eta.Parser.HaddockUtils
                       , Eta.Parser.Lexer
                       , Eta.Parser.Parse
                       , Eta.Parser.Parser
                       , Eta.Parser.RdrHsSyn
                       , Eta.Prelude.ForeignCall
                       , Eta.Prelude.KnownUniques
                       , Eta.Prelude.PrelInfo
                       , Eta.Prelude.PrelNames
                       , Eta.Prelude.PrelRules
                       , Eta.Prelude.PrimOp
                       , Eta.Prelude.THNames
                       , Eta.Prelude.TysPrim
                       , Eta.Prelude.TysWiredIn
                       , Eta.Profiling.CostCentre
                       , Eta.Profiling.ProfInit
                       , Eta.Profiling.SCCfinal
                       , Eta.REPL
                       , Eta.REPL.Leak
                       , Eta.REPL.Linker
                       , Eta.Rename.RnBinds
                       , Eta.Rename.RnEnv
                       , Eta.Rename.RnExpr
                      --  , Eta.Rename.RnFixity
                       , Eta.Rename.RnHsDoc
                       , Eta.Rename.RnNames
                       , Eta.Rename.RnPat
                       , Eta.Rename.RnSource
                       , Eta.Rename.RnSplice
                       , Eta.Rename.RnTypes
                      --  , Eta.Rename.RnUnbound
                      --  , Eta.Rename.RnUtils
                       , Eta.SimplCore.CallArity
                       , Eta.SimplCore.CoreMonad
                       , Eta.SimplCore.CSE
                       , Eta.SimplCore.FloatIn
                       , Eta.SimplCore.FloatOut
                       , Eta.SimplCore.LiberateCase
                       , Eta.SimplCore.OccurAnal
                       , Eta.SimplCore.SAT
                       , Eta.SimplCore.SetLevels
                       , Eta.SimplCore.SimplCore
                       , Eta.SimplCore.SimplEnv
                       , Eta.SimplCore.Simplify
                       , Eta.SimplCore.SimplMonad
                       , Eta.SimplCore.SimplUtils
                       , Eta.SimplStg.SimplStg
                       , Eta.SimplStg.StgStats
                       , Eta.SimplStg.UnariseStg
                       , Eta.Specialise.Rules
                       , Eta.Specialise.SpecConstr
                       , Eta.Specialise.Specialise
                       , Eta.StgSyn.CoreToStg
                       , Eta.StgSyn.StgLint
                       , Eta.StgSyn.StgSyn
                       , Eta.StrAnal.DmdAnal
                       , Eta.StrAnal.WorkWrap
                       , Eta.StrAnal.WwLib
                       , Eta.SysTools.Terminal
                       , Eta.TypeCheck.FamInst
                       , Eta.TypeCheck.FunDeps
                       , Eta.TypeCheck.Inst
                       , Eta.TypeCheck.TcAnnotations
                       , Eta.TypeCheck.TcArrows
                       , Eta.TypeCheck.TcBackpack
                       , Eta.TypeCheck.TcBinds
                       , Eta.TypeCheck.TcCanonical
                       , Eta.TypeCheck.TcClassDcl
                       , Eta.TypeCheck.TcDefaults
                       , Eta.TypeCheck.TcDeriv
                       , Eta.TypeCheck.TcEnv
                       , Eta.TypeCheck.TcErrors
                       , Eta.TypeCheck.TcEvidence
                       , Eta.TypeCheck.TcExpr
                       , Eta.TypeCheck.TcFlatten
                       , Eta.TypeCheck.TcForeign
                       , Eta.TypeCheck.TcGenDeriv
                       , Eta.TypeCheck.TcGenGenerics
                       , Eta.TypeCheck.TcHsSyn
                       , Eta.TypeCheck.TcHsType
                       , Eta.TypeCheck.TcInstDcls
                       , Eta.TypeCheck.TcInteract
                       , Eta.TypeCheck.TcMatches
                       , Eta.TypeCheck.TcMType
                       , Eta.TypeCheck.TcPat
                       , Eta.TypeCheck.TcPatSyn
                       , Eta.TypeCheck.TcPluginM
                       , Eta.TypeCheck.TcRnDriver
                       , Eta.TypeCheck.TcRnMonad
                       , Eta.TypeCheck.TcRnTypes
                       , Eta.TypeCheck.TcRules
                       , Eta.TypeCheck.TcSimplify
                       , Eta.TypeCheck.TcSMonad
                       , Eta.TypeCheck.TcSplice
                       , Eta.TypeCheck.TcTyClsDecls
                       , Eta.TypeCheck.TcTyDecls
                       , Eta.TypeCheck.TcType
                       , Eta.TypeCheck.TcTypeNats
                       , Eta.TypeCheck.TcUnify
                       , Eta.TypeCheck.TcValidity
                       , Eta.Types.Class
                       , Eta.Types.CoAxiom
                       , Eta.Types.Coercion
                       , Eta.Types.FamInstEnv
                       , Eta.Types.InstEnv
                       , Eta.Types.Kind
                       , Eta.Types.OptCoercion
                       , Eta.Types.TyCon
                       , Eta.Types.Type
                       , Eta.Types.TypeRep
                       , Eta.Types.Unify
                       , Eta.Utils.Bag
                       , Eta.Utils.Binary
                       , Eta.Utils.BooleanFormula
                       , Eta.Utils.BufWrite
                       , Eta.Utils.Digraph
                       , Eta.Utils.Encoding
                       , Eta.Utils.EnumSet
                       , Eta.Utils.Exception
                       , Eta.Utils.ExtsCompat46
                       , Eta.Utils.FastBool
                       , Eta.Utils.FastFunctions
                       , Eta.Utils.FastMutInt
                       , Eta.Utils.FastString
                       , Eta.Utils.FastTypes
                       , Eta.Utils.Fingerprint
                       , Eta.Utils.FiniteMap
                       , Eta.Utils.FV
                       , Eta.Utils.GraphBase
                       , Eta.Utils.GraphColor
                       , Eta.Utils.GraphOps
                       , Eta.Utils.GraphPpr
                       , Eta.Utils.IOEnv
                       , Eta.Utils.Json
                       , Eta.Utils.ListSetOps
                       , Eta.Utils.Maybes
                       , Eta.Utils.Metrics
                       , Eta.Utils.MonadUtils
                       , Eta.Utils.OrdList
                       , Eta.Utils.Outputable
                       , Eta.Utils.Pair
                       , Eta.Utils.Panic
                       , Eta.Utils.Platform
                       , Eta.Utils.PprColor
                       , Eta.Utils.Pretty
                       , Eta.Utils.State
                       , Eta.Utils.Stream
                       , Eta.Utils.StringBuffer
                       , Eta.Utils.UniqDFM
                       , Eta.Utils.UniqDSet
                       , Eta.Utils.UniqFM
                       , Eta.Utils.UniqSet
                       , Eta.Utils.UnVarGraph
                       , Eta.Utils.Util
                       , Eta.Utils.JAR
                       , Paths_eta
    build-depends:       base >= 4.7 && < 5
                       , binary
                       , bytestring
                       , text
                       , eta-boot
                       , eta-boot-meta
                       , deepseq    >= 1.4 && < 1.5
                       , time       >= 1.4 && < 1.9
                       , process    >= 1   && < 1.7
                       , directory >= 1.2
                       , filepath
                       , codec-jvm >= 0
                       , hpc
                       , mtl
                       , zip >= 0.1.8
                       , path
                       , path-io
                       , exceptions
                       , transformers
                       , array
                       , containers
                       , hpp >= 0.5.2
                       , cpphs
                       , unix-compat >= 0.4.3.1
                       , gitrev
                       , semigroups

    if os(windows)
        build-depends:   Win32
    else
        build-depends:   unix
    hs-source-dirs:      compiler
    include-dirs:        include
    install-includes:    HsVersions.h Bytecodes.h
    exposed:             True
    buildable:           True
    build-tools:         alex
                       , happy
    build-tool-depends:  happy:happy <= 1.19.9
    if flag(debug)
       ghc-options:      -DDEBUG

executable eta
   ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -Werror
   hs-source-dirs:      eta
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       array
                      , base >= 4.7 && < 5
                      , bytestring == 0.10.*
                      , deepseq == 1.4.*
                      , directory
                      , filepath
                      , process
                      , transformers < 0.6
                      , time < 1.9
                      , eta
   if flag(repl)
       -- NB: this is never built by the bootstrapping Eta+libraries
       Build-depends:
           containers     == 0.5.*,
           eta-boot,
           eta-repl,
           haskeline      == 0.7.*
       if os(windows)
           build-depends:   Win32
       else
           build-depends:   unix
       CPP-Options: -DETA_REPL
       GHC-Options: -fno-warn-name-shadowing
       Other-Modules:
           Eta.REPL.UI
           Eta.REPL.UI.Info
           Eta.REPL.UI.Monad
           Eta.REPL.UI.Tags
       Other-Extensions:
           BangPatterns
           FlexibleInstances
           LambdaCase
           MagicHash
           MultiWayIf
           OverloadedStrings
           RankNTypes
           RecordWildCards
           ScopedTypeVariables
           UnboxedTuples
           ViewPatterns

executable eta-package-test
    hs-source-dirs:      tests/packages
    main-is:             Test.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , turtle >= 1.5.8
                       , text
                       , aeson
                       , bytestring
                       , directory
                       , filepath
    ghc-options:       -Wall -Werror

executable eta-test-suite
    hs-source-dirs:      tests/suite
    main-is:             Driver.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , containers
                       , deepseq
                       , directory
                       , extra
                       , filepath
                       , Glob
                       , process
                       , process-extras
                       , tasty
                       , tasty-golden
    ghc-options:       -Wall -Werror -fno-warn-name-shadowing
