name:                ghcvm
version:             0.0.0.1
description:         Haskell to JVM compiler
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          Rahul Muttineni <rahulmutt@gmail.com>
copyright:           Copyright (c) Rahul Muttineni 2016
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  compiler/GHCVM/Parser/Parser.y
                     compiler/GHCVM/Parser/Lexer.x

source-repository head
    type: git
    location: https://github.com/rahulmutt/ghcvm.git

library
    default-language:    Haskell2010
    extensions:          RecordWildCards
                       , NamedFieldPuns
                       , OverloadedStrings
                       , MultiParamTypeClasses
                       , BangPatterns
                       , TupleSections
    exposed-modules:     GHCVM.DriverPipeline
                       , GHCVM.Packages
                       , GHCVM.DeSugar.Check
                       , GHCVM.DeSugar.DeSugar
                       , GHCVM.DeSugar.DsMonad
                       , GHCVM.DeSugar.DsArrows
                       , GHCVM.DeSugar.DsBinds
                       , GHCVM.DeSugar.DsExpr
                       , GHCVM.DeSugar.DsGRHSs
                       , GHCVM.DeSugar.DsListComp
                       , GHCVM.DeSugar.DsMeta
                       , GHCVM.DeSugar.DsForeign
                       , GHCVM.DeSugar.DsUtils
                       , GHCVM.DeSugar.Match
                       , GHCVM.DeSugar.MatchCon
                       , GHCVM.DeSugar.MatchLit
                       , GHCVM.Rename.RnBinds
                       , GHCVM.Rename.RnEnv
                       , GHCVM.Rename.RnExpr
                       , GHCVM.Rename.RnHsDoc
                       , GHCVM.Rename.RnNames
                       , GHCVM.Rename.RnPat
                       , GHCVM.Rename.RnSource
                       , GHCVM.Rename.RnSplice
                       , GHCVM.Rename.RnTypes
                       , GHCVM.TypeCheck.TcRnDriver
                       , GHCVM.Iface.BinIface
                       , GHCVM.Iface.LoadIface
                       , GHCVM.Iface.MkIface
                       , GHCVM.Iface.TcIface
                       , GHCVM.CodeGen.Main
                       , GHCVM.CodeGen.Monad
                       , GHCVM.CodeGen.Closure
                       , GHCVM.CodeGen.Object
                       , GHCVM.CodeGen.ArgRep
                       , GHCVM.CodeGen.Layout
                       , GHCVM.CodeGen.Env
                       , GHCVM.CodeGen.Types
                       , GHCVM.CodeGen.Name
                       , GHCVM.CodeGen.Foreign
                       , GHCVM.CodeGen.Prim
                       , GHCVM.CodeGen.LetNoEscape
                       , GHCVM.Debug
                       , GHCVM.CodeGen.Rts
                       , GHCVM.CodeGen.Bind
                       , GHCVM.CodeGen.Expr
                       , GHCVM.CodeGen.Con
                       , GHCVM.CodeGen.Utils
                       , GHCVM.Parser.Parse
                       , GHCVM.TcForeign
                       , GHCVM.Util
                       , GHCVM.Constants
                       , GHCVM.Primitive
                       , GHCVM.JAR
    other-modules:       GHCVM.Parser.Parser
                       , GHCVM.Parser.Lexer
                       , GHCVM.Parser.RdrHsSyn
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , text
                       , ghc >= 7.10.3 && < 7.11.0
                       , directory >= 1.2
                       , filepath
                       , codec-jvm >= 0
                       , control-monad-exception >= 0.11
                       , mtl
                       , zip
                       , path
                       , exceptions
                       , transformers
                       , array
                       , containers
    hs-source-dirs:      compiler
    exposed:             True
    buildable:           True
    build-tools:         alex
                       , happy

executable ghcvm
    ghc-options:         -Wall
    hs-source-dirs:      ghcvm
    main-is:             Main.hs
    default-language:    Haskell2010
    other-modules:       GhciMonad
                         GhciTags
                         InteractiveUI
    build-depends:       array
                       , base >= 4.7 && < 5
                       , bytestring
                       , deepseq
                       , directory
                       , filepath
                       , ghc >= 7.10.3 && < 7.11.0
                       , ghc-paths == 0.1.0.9
                       , haskeline
                       , process
                       , transformers
                       , unix
                       , ghcvm
                                            

executable ghcvm-build
    hs-source-dirs:      shake
    main-is:             Build.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , shake
                       , directory
                       , Cabal
                       , containers >= 0.5
